Added downloads page and included microBadger. -SJA

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Allen Technology Solutions</title>
 </head>
 <body>
-<h1>Future home of Allen Technology Solutions</h1>
+<h1>Allen Technology Solutions</h1>
+<a href="downloads">Downloads</a>
 </body>
 </html>
