Updated web pages to improve usability. -SJA

--- a/downloads/microBadger/index.html
+++ b/downloads/microBadger/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-<h1>MicroBadger</h1>
-<a href="microBadger.exe">Windows Link</a>
-<a href="microBadger">Linux Link</a>
+<h1>Allen Technology Solutions</h1>
+<h2>MicroBadger</h2>
+<a href="microBadger.exe">Windows Link</a><br />
+<a href="microBadger">Linux Link</a><br />
 </body>
 </html>
