--- a/downloads/index.html
+++ b/downloads/index.html
@@ -2,6 +2,7 @@
 <body>
 <h1>Allen Technology Solutions</h1>
 <h2>Downloads</h2>
+<h3>microBadger</h3>
 <a href="microBadger/microBadger.exe">Windows Link</a><br />
 <a href="microBadger/microBadger">Linux Link</a><br />
 </body>
