Fixed wording on download page. -SJA

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -10,7 +10,7 @@
     <a href="microBadger/microBadger-0.2.0">For Linux</a><br />
     <div>
       <h4>Version 0.2.0</h4>
-      Initial software release. MicroBadger randomizes a user's five displayed microbadges every 10 minutes from all of the user's microbadges except contest microbadges. 
+      Initial software release. MicroBadger randomizes a user's five displayed microbadges every 10 minutes from all of the user's microbadges except those in the 'Contest' category. 
     </div>
   </body>
 </html>
