removed downloads folder and added links to github page. -SJA

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <h1>Allen Technology Solutions</h1>
-<a href="downloads">Downloads</a>
+<h2>Software</h2>
+<a href="github.com/allentechnology/">github account</a>
+<h3>MicroBadger</h3>
+<a href="github.com/allentechnology/microBadger/releases/latest">download microBadger</a>
 </body>
 </html>
