fixed link addresses to github. -SJA

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 <h1>Allen Technology Solutions</h1>
 <h2>Software</h2>
-<a href="github.com/allentechnology/">github account</a>
+<a href="https://github.com/allentechnology/">github account</a>
 <h3>MicroBadger</h3>
-<a href="github.com/allentechnology/microBadger/releases/latest">download microBadger</a>
+<a href="https://github.com/allentechnology/microBadger/releases/latest">download microBadger</a>
 </body>
 </html>
