Added bootstrap theme to website. Still working on populating the pages and links. -SJA

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <html>
-<head>
-<title>Allen Technology Solutions</title>
-</head>
-<body>
-<h1>Allen Technology Solutions</h1>
-<h2>Software</h2>
-<a href="https://github.com/allentechnology/">github account</a>
-<h3>MicroBadger</h3>
-<a href="https://github.com/allentechnology/microBadger/releases/latest">download microBadger</a>
-</body>
+    <head>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    </head>
+    <body>
+	<div id="nav">
+	</div>
+	<script>
+	 $(document).ready(function(){
+	    $("#nav").load("nav.html  #navigation-bar");
+	 });
+	</script>
+	<h1>
+	    Welcome!
+	</h1>
+	<p>
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales tempor iaculis. Integer dictum ex in dictum vestibulum. Morbi erat sem, condimentum sit amet sapien ac, viverra scelerisque neque. Mauris scelerisque porttitor nibh vel maximus. Phasellus vel interdum neque, a condimentum mi. Proin dui arcu, laoreet ut rhoncus et, accumsan at massa. Vivamus eros ligula, luctus vitae quam non, imperdiet rutrum urna.
+	</p>
+	<p>
+	    Integer metus dolor, sollicitudin eget suscipit a, pulvinar non ligula. Donec dictum magna ut ante fringilla volutpat. Nulla facilisi. Maecenas pharetra dui eu purus ornare, malesuada commodo nulla convallis. Cras eget lobortis risus. Sed vel quam convallis, tempus felis id, egestas quam. Nam sodales, dolor vel cursus aliquam, lorem dolor sollicitudin sem, in pharetra mi nibh ut ligula. Sed id leo in nulla blandit euismod eleifend in dolor. Duis a est magna. Maecenas ut eros sodales, eleifend elit id, convallis turpis. Curabitur et lorem a justo malesuada vestibulum. Nunc vel ex quis enim feugiat auctor vitae a metus. Vivamus ac lobortis justo.
+	</p>
+    </body>
 </html>
