--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <html>
-    <head>
+    <head id="header-info">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -38,10 +38,10 @@
 			<li class="dropdown">
 			    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
 			    <ul class="dropdown-menu" role="menu">
-				<li><a href="#">MicroBadger</a></li>
-				<li><a href="#">PeoplePlanner</a></li>
-				<li><a href="#">KidTracker</a></li>
-				<li><a href="#">MenuMaker</a></li>
+				<li><a href="products.html#microBadger">MicroBadger</a></li>
+				<li><a href="products.html#peoplePlanner">PeoplePlanner</a></li>
+				<li><a href="products.html#kidTracker">KidTracker</a></li>
+				<li><a href="products.html#menuMaker">MenuMaker</a></li>
 				<li class="divider"></li>
 				<li><a href="https://github.com/allentechnology">Github Page</a></li>
 			    </ul>
